fix bug on firefox where description would be pushed below links

--- a/airsonic-main/src/main/webapp/style/booksonic.css
+++ b/airsonic-main/src/main/webapp/style/booksonic.css
@@ -42,4 +42,5 @@
 #right{
     width: -moz-available;
     width: -webkit-fill-available;
+    max-width:80%;
 }
